syntax = "proto3";

package github.com.darialissi.msa_big_tech.chat;

option go_package = "github.com/darialissi/msa_big_tech/chat/pkg;chat";


// Создание личного чата
message CreateDirectChatRequest {
  string participant_id = 1;
}

message CreateDirectChatResponse {
  string chat_id = 1;
}

// Получение информации о чате
message GetChatRequest {
  string chat_id = 1;
}

message GetChatResponse {
  Chat chat = 1;
}

// Получение списка чатов пользователя
message ListUserChatsRequest {
  string user_id = 1;
}

message ListUserChatsResponse {
  repeated Chat chats = 1;
}

// Получение списка участников чата
message ListChatMembersRequest {
  string chat_id = 1;
}

message ListChatMembersResponse {
  repeated ChatMember members = 1;
}

// Отправление сообщения
message SendMessageRequest {
  string chat_id = 1;
  string text = 2;
}

message SendMessageResponse {
  Message message = 1;
}

// Получение истории сообщений чата
message ListMessagesRequest {
  string chat_id = 1;
  uint64 limit = 2;
}

message ListMessagesResponse {
  repeated Message messages = 1;
}

// Серверный стрим новых сообщений
message StreamMessagesRequest {
  string chat_id = 1;
}

message StreamMessagesResponse {
  Message stream = 1;
}

// Объекты
message Chat {
  string chat_id = 1;
  string creator_id = 2;
  string participant_id = 3;
}

message ChatMember {
  string user_id = 1;
  string role = 2;
}

message Message {
  string message_id = 1;
  string text = 2;
  string from_user_id = 3;
  string to_chat_id = 4;
}